--- a/styles.css
+++ b/styles.css
@@ -1,3 +1,11 @@
+body > * {
+  margin-bottom: 40px;
+}
+
+input {
+  display: block;
+}
+
 ul {
   list-style: none;
 }
@@ -13,4 +21,16 @@ ul {
 .picture-item {
   display: block;
   height: 200px;
+}
+
+#validation-input {
+  border: 3px solid #bdbdbd;
+}
+
+#validation-input.valid {
+  border-color: #4caf50;
+}
+
+#validation-input.invalid {
+  border-color: #f44336;
 }
